--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "export": "next export",
+    "deploy": "gh-pages -d docs",
+    "predeploy": "npm run build && npm run export"
   },
   "dependencies": {
     "eslint": "8.36.0",
@@ -19,6 +22,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "framer-motion": "^10.5.0",
+    "gh-pages": "^5.0.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7"
   }
